# VegaFEM

./: .gitignore  CMakeLists.txt  LICENSE
libraries/clothBW/: CMakeLists.txt
libraries/configFile/: CMakeLists.txt
libraries/corotationalLinearFEM/: CMakeLists.txt
libraries/distanceField/: CMakeLists.txt  computeField.cpp  computeFieldMT.cpp  computeFieldNarrowBand.cpp
libraries/getopts/: CMakeLists.txt
libraries/graph/: CMakeLists.txt
libraries/hashTable/: CMakeLists.txt
libraries/imageIO/: CMakeLists.txt
libraries/matrix/: CMakeLists.txt
libraries/matrixIO/: CMakeLists.txt
libraries/mesher/: CMakeLists.txt
libraries/minivector/: CMakeLists.txt
libraries/objMesh/: CMakeLists.txt  boundingBox.cpp  octree.cpp  triangle.cpp
libraries/performanceCounter/: CMakeLists.txt
libraries/polarDecomposition/: CMakeLists.txt
libraries/sparseMatrix/: CMakeLists.txt
libraries/sparseSolver/: CMakeLists.txt
libraries/volumetricMesh/: CMakeLists.txt
libraries/wildMagic/geometryQuery/: CMakeLists.txt
libraries/wildMagic/meshKey/: CMakeLists.txt
libraries/wildMagic/rational/: CMakeLists.txt
libraries/windingNumber/: CMakeLists.txt
utilities/tetMesher/: CMakeLists.txt  test.msh  tmp.mesh
